--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/themes": "^3.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
