--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@excalidraw/excalidraw": "^0.18.0",
     "@mdx-js/react": "^3.1.1",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -19,10 +21,24 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/themes": "^3.3.0",
     "@tailwindcss/vite": "^4.1.18",
+    "bowser": "^2.14.1",
+    "browser-image-compression": "^2.0.2",
+    "cron-parser": "^5.5.0",
+    "cronstrue": "^3.12.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
+    "decimal.js": "^10.6.0",
+    "diff-match-patch": "^1.0.5",
+    "fast-xml-parser": "^5.3.6",
     "flexsearch": "^0.8.212",
     "gray-matter": "^4.0.3",
+    "json-to-ts": "^2.1.0",
+    "jsonpath-plus": "^10.3.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
+    "mathjs": "^15.1.1",
     "mermaid": "^11.12.2",
+    "monaco-editor": "^0.55.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
@@ -31,15 +47,21 @@
     "react-syntax-highlighter": "^16.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "spark-md5": "^3.0.2",
+    "uuid": "^13.0.0",
+    "vite-plugin-monaco-editor": "^1.1.0",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@mdx-js/rollup": "^3.1.1",
+    "@types/diff-match-patch": "^1.0.36",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/spark-md5": "^3.0.5",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
